[tool.poetry]
name = "ngi-restapi"
version = "0.1.0"
description = ""
authors = ["Dmytro Oseledko <d.oseledko@outlook.com>"]
readme = "README.md"
packages = [{include = "ngi_restapi"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
